Fixed the extremely aggravating misaligned box on login page. Fixed highly annoying lack of padding on botton of all pages by adding bottom padding.

--- a/development/css/main.css
+++ b/development/css/main.css
@@ -8,6 +8,8 @@ body {
 
 .container{
     background-color: #d3d3d3;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .scrollable {
